[gd_scene load_steps=3 format=3 uid="uid://cxqfaq2qt3dfx"]

[ext_resource type="TileSet" uid="uid://bl7wr21vcgyff" path="res://objects/tilemaps/assets/tile_map.tres" id="1_4l20c"]
[ext_resource type="Script" path="res://objects/tilemaps/play_map/play_map.gd" id="1_5q4j1"]

[node name="PlayMap" type="Node2D" groups=["Map"]]
script = ExtResource("1_5q4j1")
bob_speed = 0.5

[node name="DefaultLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("1_4l20c")

[node name="RenderLayers" type="Node2D" parent="."]
z_as_relative = false
y_sort_enabled = true

[node name="TileMapLayer1" type="TileMapLayer" parent="RenderLayers"]
z_as_relative = false
y_sort_enabled = true
tile_set = ExtResource("1_4l20c")

[node name="TileMapLayer2" type="TileMapLayer" parent="RenderLayers"]
z_as_relative = false
y_sort_enabled = true
tile_set = ExtResource("1_4l20c")

[node name="TileMapLayer3" type="TileMapLayer" parent="RenderLayers"]
z_as_relative = false
y_sort_enabled = true
tile_set = ExtResource("1_4l20c")

[node name="TileMapLayer4" type="TileMapLayer" parent="RenderLayers"]
z_as_relative = false
y_sort_enabled = true
tile_set = ExtResource("1_4l20c")

[node name="TileMapLayer5" type="TileMapLayer" parent="RenderLayers"]
z_as_relative = false
y_sort_enabled = true
tile_set = ExtResource("1_4l20c")

[node name="TileMapLayer6" type="TileMapLayer" parent="RenderLayers"]
z_as_relative = false
y_sort_enabled = true
tile_set = ExtResource("1_4l20c")
